--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lgin-flow-1",
+  "name": "deliveroo-clone",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,13 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.11",
-    "expo-status-bar": "~1.6.0",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "axios": "^1.5.0",
+    "expo": "^49.0.11",
+    "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-native": "0.71.8",
+    "react-native-animatable": "^1.3.3",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-vector-icons": "^10.0.0",
+    "twrnc": "^3.6.4",
+    "@react-native-async-storage/async-storage": "1.18.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.0.14",
+    "@types/react-native-vector-icons": "^6.4.14",
+    "typescript": "^4.9.4"
   },
   "private": true
 }
